--- a/Para.Api/Para.Api/appsettings.json
+++ b/Para.Api/Para.Api/appsettings.json
@@ -9,7 +9,7 @@
   "ConnectionStrings": {
     "MsSqlConnection": "Server=localhost,1433;Database=padb;User Id=sa;Password=Passw0rd;TrustServerCertificate=True;",
     "PostgresSqlConnection": "User ID=postgres;Password=Lucy89-21Cgy;Server=localhost;Port=5432;Database=padb;Integrated Security=true;Pooling=true;",
-    "HangfireConnection": "Server=localhost; Database=padb;Trusted_Connection=false;TrustServerCertificate=True;  User Id=sa; Password=Passw0rd;  MultipleActiveResultSets=true;Min Pool Size=0;Max Pool Size=100;Pooling=true;"
+    "HangfireConnection": "Server=localhost,1433; Database=padb;Trusted_Connection=false;TrustServerCertificate=True;User Id=sa;Password=Passw0rd;MultipleActiveResultSets=true;Min Pool Size=0;Max Pool Size=100;Pooling=true;"
   },
   "Redis": {
     "Host": "localhost",
